src/test/ui/rfc1598-generic-associated-types/empty_generics.stderr
error: expected one of `>`, `const`, identifier, or lifetime, found `,`
  --> $DIR/empty_generics.rs:5:14
   |
LL |     type Bar<,>;
   |              ^ expected one of `>`, `const`, identifier, or lifetime here

warning: the feature `generic_associated_types` is incomplete and may cause the compiler to crash
  --> $DIR/empty_generics.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

